--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -238,9 +238,10 @@
 						</span>
 					</a>
 						<ul class="treeview-menu">
-							<li><a href="#"><i class="fa fa-circle-o"></i> Line
-									Chart</a></li>
-							<li><a href="#"><i class="fa fa-circle-o"></i> Pie Chart</a></li>
+							<li><a onclick="$('#schedulerStatisticsChart').show()"><i
+									class="fa fa-circle-o"></i>Scheduler Statistics</a></li>
+							<li><a onclick="$('#failureStatisticsChart').show()"><i
+									class="fa fa-circle-o"></i>Failure Statistics</a></li>
 						</ul></li>
 					<li><a href="#"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
 				</ul>
@@ -275,7 +276,7 @@
 								<p>a new scheduler job</p>
 							</div>
 							<div class="icon">
-								<i class="ion ion-ios-timer"></i>
+								<i class="ion ion-clipboard"></i>
 							</div>
 							<span class="small-box-footer">&nbsp;</span>
 						</div>
@@ -286,16 +287,15 @@
 						<div class="small-box bg-green">
 							<div class="inner">
 								<h3>
-									53<sup style="font-size: 20px">%</sup>
+									<span id="NormalJobCount">0</span>
 								</h3>
 
-								<p>Bounce Rate</p>
+								<p>Running Job</p>
 							</div>
 							<div class="icon">
-								<i class="ion ion-stats-bars"></i>
+								<i class="ion ion-ios-timer"></i>
 							</div>
-							<a href="#" class="small-box-footer">More info <i
-								class="fa fa-arrow-circle-right"></i></a>
+							<span class="small-box-footer">&nbsp;</span>
 						</div>
 					</div>
 					<!-- ./col -->
@@ -303,15 +303,16 @@
 						<!-- small box -->
 						<div class="small-box bg-yellow">
 							<div class="inner">
-								<h3>44</h3>
+								<h3>
+									<span id="SuspendJobCount">0</span>
+								</h3>
 
-								<p>User Registrations</p>
+								<p>Suspend Job</p>
 							</div>
 							<div class="icon">
-								<i class="ion ion-person-add"></i>
+								<i class="ion ion-ios-timer"></i>
 							</div>
-							<a href="#" class="small-box-footer">More info <i
-								class="fa fa-arrow-circle-right"></i></a>
+							<span class="small-box-footer">&nbsp;</span>
 						</div>
 					</div>
 					<!-- ./col -->
@@ -319,15 +320,16 @@
 						<!-- small box -->
 						<div class="small-box bg-red">
 							<div class="inner">
-								<h3>65</h3>
+								<h3>
+									<span id="failureCount">0</span>
+								</h3>
 
-								<p>Unique Visitors</p>
+								<p>Failure Times</p>
 							</div>
 							<div class="icon">
-								<i class="ion ion-pie-graph"></i>
+								<i class="ion ion-sad"></i>
 							</div>
-							<a href="#" class="small-box-footer">More info <i
-								class="fa fa-arrow-circle-right"></i></a>
+							<span class="small-box-footer">&nbsp;</span>
 						</div>
 					</div>
 					<!-- ./col -->
@@ -375,6 +377,10 @@
 										<input type="text" class="form-control" id="appUrl"
 											placeholder="Application URL:">
 									</div>
+								</div>
+								<div class="form-group" id="postBody" style="display: none;">
+									<textarea class="form-control" rows="3"
+										placeholder="POST Body:"></textarea>
 								</div>
 								<div class="form-group">
 									<input type="text" class="form-control" id="successfulCode"
@@ -444,91 +450,25 @@
 				<div class="row">
 					<!-- Left col -->
 					<section class="col-lg-6 connectedSortable">
-						<!-- Calendar -->
-						<div class="box box-solid bg-green-gradient">
-							<div class="box-header">
-								<i class="fa fa-calendar"></i>
+						<div class="box box-danger" id="schedulerStatisticsChart">
+							<div class="box-header with-border">
+								<h3 class="box-title">Scheduler Statistics</h3>
 
-								<h3 class="box-title">Calendar</h3>
-								<!-- tools box -->
-								<div class="pull-right box-tools">
-									<!-- button with a dropdown -->
-									<div class="btn-group">
-										<button type="button"
-											class="btn btn-success btn-sm dropdown-toggle"
-											data-toggle="dropdown">
-											<i class="fa fa-bars"></i>
-										</button>
-										<ul class="dropdown-menu pull-right" role="menu">
-											<li><a href="#">Add new event</a></li>
-											<li><a href="#">Clear events</a></li>
-											<li class="divider"></li>
-											<li><a href="#">View calendar</a></li>
-										</ul>
-									</div>
-									<button type="button" class="btn btn-success btn-sm"
+								<div class="box-tools pull-right">
+									<button type="button" class="btn btn-box-tool"
 										data-widget="collapse">
 										<i class="fa fa-minus"></i>
 									</button>
-									<button type="button" class="btn btn-success btn-sm"
+									<button type="button" class="btn btn-box-tool"
 										data-widget="remove">
 										<i class="fa fa-times"></i>
 									</button>
 								</div>
-								<!-- /. tools -->
 							</div>
-							<!-- /.box-header -->
-							<div class="box-body no-padding">
-								<!--The calendar -->
-								<div id="calendar" style="width: 100%"></div>
+							<div class="box-body">
+								<canvas id="pieChart" style="height: 250px"></canvas>
 							</div>
 							<!-- /.box-body -->
-							<div class="box-footer text-black">
-								<div class="row">
-									<div class="col-sm-6">
-										<!-- Progress bars -->
-										<div class="clearfix">
-											<span class="pull-left">Task #1</span> <small
-												class="pull-right">90%</small>
-										</div>
-										<div class="progress xs">
-											<div class="progress-bar progress-bar-green"
-												style="width: 90%;"></div>
-										</div>
-
-										<div class="clearfix">
-											<span class="pull-left">Task #2</span> <small
-												class="pull-right">70%</small>
-										</div>
-										<div class="progress xs">
-											<div class="progress-bar progress-bar-green"
-												style="width: 70%;"></div>
-										</div>
-									</div>
-									<!-- /.col -->
-									<div class="col-sm-6">
-										<div class="clearfix">
-											<span class="pull-left">Task #3</span> <small
-												class="pull-right">60%</small>
-										</div>
-										<div class="progress xs">
-											<div class="progress-bar progress-bar-green"
-												style="width: 60%;"></div>
-										</div>
-
-										<div class="clearfix">
-											<span class="pull-left">Task #4</span> <small
-												class="pull-right">40%</small>
-										</div>
-										<div class="progress xs">
-											<div class="progress-bar progress-bar-green"
-												style="width: 40%;"></div>
-										</div>
-									</div>
-									<!-- /.col -->
-								</div>
-								<!-- /.row -->
-							</div>
 						</div>
 						<!-- /.box -->
 					</section>
@@ -536,54 +476,28 @@
 					<!-- right col (We are only adding the ID to make the widgets sortable)-->
 					<section class="col-lg-6 connectedSortable">
 
-						<!-- Map box -->
-						<div class="box box-solid bg-light-blue-gradient">
-							<div class="box-header">
-								<!-- tools box -->
-								<div class="pull-right box-tools">
-									<button type="button"
-										class="btn btn-primary btn-sm daterange pull-right"
-										data-toggle="tooltip" title="Date range">
-										<i class="fa fa-calendar"></i>
-									</button>
-									<button type="button" class="btn btn-primary btn-sm pull-right"
-										data-widget="collapse" data-toggle="tooltip" title="Collapse"
-										style="margin-right: 5px;">
+						<!-- LINE CHART -->
+						<div class="box box-info" id="failureStatisticsChart">
+							<div class="box-header with-border">
+								<h3 class="box-title">Failure Statistics</h3>
+
+								<div class="box-tools pull-right">
+									<button type="button" class="btn btn-box-tool"
+										data-widget="collapse">
 										<i class="fa fa-minus"></i>
 									</button>
+									<button type="button" class="btn btn-box-tool"
+										data-widget="remove">
+										<i class="fa fa-times"></i>
+									</button>
 								</div>
-								<!-- /. tools -->
-
-								<i class="fa fa-map-marker"></i>
-
-								<h3 class="box-title">Visitors</h3>
 							</div>
 							<div class="box-body">
-								<div id="world-map" style="height: 250px; width: 100%;"></div>
-							</div>
-							<!-- /.box-body-->
-							<div class="box-footer no-border">
-								<div class="row">
-									<div class="col-xs-4 text-center"
-										style="border-right: 1px solid #f4f4f4">
-										<div id="sparkline-1"></div>
-										<div class="knob-label">Visitors</div>
-									</div>
-									<!-- ./col -->
-									<div class="col-xs-4 text-center"
-										style="border-right: 1px solid #f4f4f4">
-										<div id="sparkline-2"></div>
-										<div class="knob-label">Online</div>
-									</div>
-									<!-- ./col -->
-									<div class="col-xs-4 text-center">
-										<div id="sparkline-3"></div>
-										<div class="knob-label">Exists</div>
-									</div>
-									<!-- ./col -->
+								<div class="chart">
+									<canvas id="barChart" style="height: 250px"></canvas>
 								</div>
-								<!-- /.row -->
 							</div>
+							<!-- /.box-body -->
 						</div>
 						<!-- /.box -->
 
@@ -794,6 +708,8 @@
 	<!-- DataTables -->
 	<script src="plugins/datatables/jquery.dataTables.min.js"></script>
 	<script src="plugins/datatables/dataTables.bootstrap.min.js"></script>
+	<!-- ChartJS 1.0.1 -->
+	<script src="plugins/chartjs/Chart.min.js"></script>
 	<!-- Morris.js charts -->
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
