--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,7 +54,7 @@
 			<!-- Logo -->
 			<a href="#" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
 				<span class="logo-mini"><b>GBM</b></span> <!-- logo for regular state and mobile devices -->
-				<span class="logo-lg"><b>HSBC</b>GBM</span>
+				<span class="logo-lg"><b>GBM</b>Hackathon2017</span>
 			</a>
 			<!-- Header Navbar: style can be found in header.less -->
 			<nav class="navbar navbar-static-top">
