--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -239,9 +239,9 @@
 					</a>
 						<ul class="treeview-menu">
 							<li><a onclick="$('#schedulerStatisticsChart').show()"><i
-									class="fa fa-circle-o"></i>Scheduler Statistics</a></li>
+									class="fa fa-circle-o"></i>Scheduler Status Statistics</a></li>
 							<li><a onclick="$('#failureStatisticsChart').show()"><i
-									class="fa fa-circle-o"></i>Failure Statistics</a></li>
+									class="fa fa-circle-o"></i>Call Failure Statistics</a></li>
 						</ul></li>
 					<li><a href="#"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
 				</ul>
@@ -452,7 +452,7 @@
 					<section class="col-lg-6 connectedSortable">
 						<div class="box box-danger" id="schedulerStatisticsChart">
 							<div class="box-header with-border">
-								<h3 class="box-title">Scheduler Statistics</h3>
+								<h3 class="box-title">Scheduler Status Statistics</h3>
 
 								<div class="box-tools pull-right">
 									<button type="button" class="btn btn-box-tool"
@@ -479,7 +479,7 @@
 						<!-- LINE CHART -->
 						<div class="box box-info" id="failureStatisticsChart">
 							<div class="box-header with-border">
-								<h3 class="box-title">Failure Statistics</h3>
+								<h3 class="box-title">Call Failure Statistics</h3>
 
 								<div class="box-tools pull-right">
 									<button type="button" class="btn btn-box-tool"
