--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -479,7 +479,7 @@
 						<!-- LINE CHART -->
 						<div class="box box-info" id="failureStatisticsChart">
 							<div class="box-header with-border">
-								<h3 class="box-title">Call Failure Statistics</h3>
+								<h3 class="box-title">Schedule Calls Statistics</h3>
 
 								<div class="box-tools pull-right">
 									<button type="button" class="btn btn-box-tool"
